Body tag on click change focus

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="app"><!--main-app--></div>
 
     <!-- 2. Update the source to entry-client.ts -->
-    <script type="module" src="/src/entry-client.js"></script>
+    <script type="module" src="./src/entry-client.js"></script>
+    <script src="./src/setFocus.js"></script>
   </body>
 </html>
