Added meta tags and open graph tags

--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
+  <meta name="keywords" content="meta tags, meta description, meta keywords, SEO, search engine optimization, javascript, linux, command prompt, vuejs, vue, vue.js, terminal, ssr, server-side-rendering, scss, css, vite, html, css" />
+  <meta name="author" content="Your Name" /> <!-- Replace "Your Name" with your actual name -->
+  <meta name="robots" content="index, follow" /> <!-- Control search engine indexing behavior -->
+  <meta name="googlebot" content="index, follow" /> <!-- Control Google search indexing behavior -->
+  <meta name="bingbot" content="index, follow" /> <!-- Control Bing search indexing behavior -->
+  <meta name="referrer" content="no-referrer-when-downgrade" /> <!-- Specify the referrer policy for outgoing links -->
+  <meta name="format-detection" content="telephone=no" /> <!-- Disable automatic detection of phone numbers -->
+  <meta http-equiv="Content-Language" content="en" /> <!-- Specify the primary language of the content -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Specify the version of IE to use -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> <!-- Control caching behavior -->
+  <meta http-equiv="Pragma" content="no-cache" /> <!-- Specify caching behavior for old browsers -->
+  <meta http-equiv="Expires" content="0" /> <!-- Specify caching behavior for old browsers -->
+  
+  <!-- Open Graph tags for social media sharing -->
+  <meta property="og:title" content="Praneeth Ravuri | Graduate student at George Mason University and Full Stack web developer" /> <!-- Replace with your website title -->
+  <meta property="og:description" content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering. A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" /> <!-- Replace with your website description -->
+  <meta property="og:image" content="./src/assets/website_preview.png" /> <!-- Replace with the URL of your website's preview image -->
+  <meta property="og:url" content="https://prav.dev/" /> <!-- Replace with the URL of your website -->
+  <meta property="og:type" content="website" /> <!-- Specify the type of your website -->
+
   <link rel="stylesheet" href="./src/style.css">
-  <title>PRAV Terminal</title>
+  <title>Praneeth Ravuri</title>
 </head>
 
 <body>
-  <!-- 1. Add "main-app", it will be replaced by our App  -->
   <div id="app"><!--main-app--></div>
 
-  <!-- 2. Update the source to entry-client.ts -->
   <script type="module" src="./src/entry-client.js"></script>
   <script src="./src/setFocus.js"></script>
-
 </body>
 
 </html>
