Changed color theme

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta property="og:type" content="website" /> <!-- Specify the type of your website -->
 
   <link rel="stylesheet" href="./src/style.css">
-  <title>Praneeth Ravuri</title>
+  <title>Praneeth Ravuri | Full Stack Web Developer</title>
 </head>
 
 <body>
