--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> <!-- Control caching behavior -->
   <meta http-equiv="Pragma" content="no-cache" /> <!-- Specify caching behavior for old browsers -->
   <meta http-equiv="Expires" content="0" /> <!-- Specify caching behavior for old browsers -->
+  <meta name="theme-color" content="#00425A"/>
   
   <!-- Open Graph tags for social media sharing -->
   <meta property="og:title" content="Praneeth Ravuri | Graduate student at George Mason University and Full Stack web developer" /> <!-- Replace with your website title -->
