Removed css url import

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
-  <meta name="keywords" content="meta tags, meta description, meta keywords, SEO, search engine optimization, javascript, linux, command prompt, vuejs, vue, vue.js, terminal, ssr, server-side-rendering, scss, css, vite, html, css" />
+  <meta name="description"
+    content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
+  <meta name="keywords"
+    content="meta tags, meta description, meta keywords, SEO, search engine optimization, javascript, linux, command prompt, vuejs, vue, vue.js, terminal, ssr, server-side-rendering, scss, css, vite, html, css" />
   <meta name="author" content="Your Name" /> <!-- Replace "Your Name" with your actual name -->
   <meta name="robots" content="index, follow" /> <!-- Control search engine indexing behavior -->
   <meta name="googlebot" content="index, follow" /> <!-- Control Google search indexing behavior -->
@@ -18,15 +20,23 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> <!-- Control caching behavior -->
   <meta http-equiv="Pragma" content="no-cache" /> <!-- Specify caching behavior for old browsers -->
   <meta http-equiv="Expires" content="0" /> <!-- Specify caching behavior for old browsers -->
-  <meta name="theme-color" content="#00425A"/>
-  
+  <meta name="theme-color" content="#00425A" />
+
   <!-- Open Graph tags for social media sharing -->
-  <meta property="og:title" content="Praneeth Ravuri | Graduate student at George Mason University and Full Stack web developer" /> <!-- Replace with your website title -->
-  <meta property="og:description" content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering. A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" /> <!-- Replace with your website description -->
-  <meta property="og:image" content="./src/assets/website_preview.png" /> <!-- Replace with the URL of your website's preview image -->
+  <meta property="og:title"
+    content="Praneeth Ravuri | Graduate student at George Mason University and Full Stack web developer" />
+  <!-- Replace with your website title -->
+  <meta property="og:description"
+    content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering. A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
+  <!-- Replace with your website description -->
+  <meta property="og:image" content="./src/assets/website_preview.png" />
+  <!-- Replace with the URL of your website's preview image -->
   <meta property="og:url" content="https://prav.dev/" /> <!-- Replace with the URL of your website -->
   <meta property="og:type" content="website" /> <!-- Specify the type of your website -->
   <title>Praneeth Ravuri | Full Stack Web Developer</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
