--- a/index.html
+++ b/index.html
@@ -36,17 +36,10 @@
   <title>Praneeth Ravuri | Full Stack Web Developer</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    rel="stylesheet">
 </head>
 
 <body>
-
-  <noscript>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet" type="text/css" />
-  </noscript>
-
   <div id="app"><!--main-app--></div>
 
   <script type="module" src="./src/entry-client.js"></script>
