--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <div id="app"><!--main-app--></div>
 
   <script type="module" src="./src/entry-client.js"></script>
+  <script src="./src/setFocus.js"></script>
 </body>
 
 </html>
