--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> <!-- Control caching behavior -->
   <meta http-equiv="Pragma" content="no-cache" /> <!-- Specify caching behavior for old browsers -->
   <meta http-equiv="Expires" content="0" /> <!-- Specify caching behavior for old browsers -->
-  <meta name="theme-color" content="#00425A" />
+  <meta name="theme-color" content="#151515" />
 
   <!-- Open Graph tags for social media sharing -->
   <meta property="og:title"
