--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Replace with the URL of your website's preview image -->
   <meta property="og:url" content="https://prav.dev/" /> <!-- Replace with the URL of your website -->
   <meta property="og:type" content="website" /> <!-- Specify the type of your website -->
-  <title>Praneeth Ravuri | Full Stack Web Developer</title>
+  <title>Praneeth Ravuri</title>
 </head>
 
 <body>
