Update meta tags

--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
+    content="Explore the innovative world of Praneeth Ravuri, a graduate student at George Mason University and a passionate Full Stack Web Developer. Dive into a portfolio showcasing cutting-edge web development projects, technical insights, and a journey through advanced computing technologies. Perfect for industry professionals, fellow developers, and technology enthusiasts seeking inspiration and collaboration." />
   <meta name="keywords"
-    content="meta tags, meta description, meta keywords, SEO, search engine optimization, javascript, linux, command prompt, vuejs, vue, vue.js, terminal, ssr, server-side-rendering, scss, css, vite, html, css" />
-  <meta name="author" content="Your Name" /> <!-- Replace "Your Name" with your actual name -->
-  <meta name="robots" content="index, follow" /> <!-- Control search engine indexing behavior -->
-  <meta name="googlebot" content="index, follow" /> <!-- Control Google search indexing behavior -->
-  <meta name="bingbot" content="index, follow" /> <!-- Control Bing search indexing behavior -->
-  <meta name="referrer" content="no-referrer-when-downgrade" /> <!-- Specify the referrer policy for outgoing links -->
-  <meta name="format-detection" content="telephone=no" /> <!-- Disable automatic detection of phone numbers -->
-  <meta http-equiv="Content-Language" content="en" /> <!-- Specify the primary language of the content -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Specify the version of IE to use -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> <!-- Control caching behavior -->
-  <meta http-equiv="Pragma" content="no-cache" /> <!-- Specify caching behavior for old browsers -->
-  <meta http-equiv="Expires" content="0" /> <!-- Specify caching behavior for old browsers -->
+    content="meta tags, meta description, meta keywords, SEO, search engine optimization, javascript, linux, command prompt, vuejs, vue, vue.js, terminal, ssr, server-side-rendering, scss, css, vite, html, css, praneeth, ravuri, praneeth ravuri, george mason university, gmu, griet, gokaraju rangaraju institute of engineering and technology, google, amazon, netflix, apple, meta, Praneeth Ravuri, Full Stack Developer, George Mason University, Web Development, Software Engineering, Python, C, HTML, CSS, JavaScript, SQL, Node JS, Vue JS, Express JS, MongoDB, Bootstrap, SCSS, jQuery, Selenium, Git, Numpy, Pandas, Scikit-Learn, Docker, Ajax, REST API, MySQL, VS Code, Programming, Coding, Tech Blog, Computer Science, Software Projects, UI/UX Design, Web Applications, Developer Portfolio" />
+  <meta name="author" content="Praneeth Ravuri" />
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <meta name="bingbot" content="index, follow" />
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta http-equiv="Content-Language" content="en" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <meta name="theme-color" content="#151515" />
 
   <!-- Open Graph tags for social media sharing -->
   <meta property="og:title"
-    content="Praneeth Ravuri | Graduate student at George Mason University and Full Stack web developer" />
+    content="Praneeth Ravuri | Graduate student at George Mason University, Software Engineer, Full Stack Developer" />
   <!-- Replace with your website title -->
   <meta property="og:description"
-    content="A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering. A personal portfolio website designed and functions like a terminal. A single page application with server-side rendering" />
+    content="Explore the innovative world of Praneeth Ravuri, a graduate student at George Mason University and a passionate Full Stack Web Developer. Dive into a portfolio showcasing cutting-edge web development projects, technical insights, and a journey through advanced computing technologies. Perfect for industry professionals, fellow developers, and technology enthusiasts seeking inspiration and collaboration." />
   <!-- Replace with your website description -->
   <meta property="og:image" content="./src/assets/website_preview.png" />
   <!-- Replace with the URL of your website's preview image -->
-  <meta property="og:url" content="https://prav.dev/" /> <!-- Replace with the URL of your website -->
+  <meta property="og:url" content="https://praneethravuri.com/" /> <!-- Replace with the URL of your website -->
   <meta property="og:type" content="website" /> <!-- Specify the type of your website -->
   <title>Praneeth Ravuri</title>
 </head>
